test/cases/bad/bad062.lat
int main() {
    string s;
    s--;
    return 0;
}
